[tool.poetry]
name = "pyrt_wit_wire"
version = "0.4.8-0"
description = "Wasm component implementing the PythonRuntime host using wit_wire protocol."
license = "Elastic-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
