[package]
name = "typescript"
version = "0.3.6-0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
lazy_static = "1.4.0"
dprint-plugin-typescript = "0.89.2"
swc_common = { workspace = true, features = ["tty-emitter"] }
swc_ecma_ast.workspace = true
swc_atoms.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_ecma_visit.workspace = true
