[package]
name = "typescript"
version = "0.4.3-0"
edition = "2021"

[dependencies]
anyhow.workspace = true
lazy_static = "1.4.0"
dprint-plugin-typescript = "0.91.0"
swc_common = { workspace = true, features = ["tty-emitter"] }
swc_ecma_ast.workspace = true
swc_atoms.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_ecma_visit.workspace = true
