[package]
name = "xtask"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = "1.0.78"
clap = { workspace = true, features = ["derive"] }
common = { path = "../common", features = ["codegen"] }
typescript = { path = "../typescript" }
schemars = { version = "0.8.16", features = ["indexmap2"] }
serde_json = "1.0.109"
project-root = "0.2.2"
mt_deno.workspace = true
typegate_engine.workspace = true
log = "0.4.20"
env_logger.workspace = true
