[package]
name = "xtask"
version = "0.3.7-0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
common = { path = "../common", features = ["codegen"] }
typescript = { path = "../typescript" }
schemars = { version = "0.8.17", features = ["indexmap2"] }
serde_json.workspace = true
project-root = "0.2.2"
mt_deno.workspace = true
typegate_engine.workspace = true
log.workspace = true
env_logger.workspace = true
