[package]
name = "metagen-client"
version.workspace = true
edition.workspace = true

[features]
default = ["graphql"]
graphql = ["tokio-util", "reqwest"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "=0.12.9", features = ["blocking", "json", "stream", "multipart"], optional = true }
mime_guess = "2.0"
futures = { version = "0.3" }
derive_more = { version = "1.0", features = ["debug"] }
lazy_static = "1.5"
url = "=2.4.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio-util = { version = "0.7", features = ["compat", "io"], optional = true }

# [features]
# default = ["sync"]
# sync = ["reqwest/blocking"]
# async = ["dep:futures", "dep:tokio-util"]
