[package]
name = "metagen"
edition.workspace = true
version.workspace = true

[dependencies]
# this library is used by typegraph_core
# so keep the codesize lite
common.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
garde = { version = "0.18", features = ["derive"] }
heck = "0.5.0-rc.1"
regex.workspace = true
once_cell.workspace = true
pretty_assertions = "1.4.0"
color-eyre.workspace = true
tera = { version = "1.20", default-features = false }
futures-concurrency.workspace = true
futures-lite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features =["full"] }
tempfile.workspace = true
