[package]
name = "metagen"
edition.workspace = true
version.workspace = true

[dependencies]
# this library is used by typegraph_core
# so keep the codesize lite
common.workspace = true

# logging
log.workspace = true

# encodding
serde.workspace = true
serde_json.workspace = true
heck.workspace = true

# ds
indexmap.workspace = true
regex.workspace = true
tera = { workspace = true, default-features = false }

# pattern
garde = { workspace = true, features = ["derive"] }
once_cell.workspace = true
color-eyre.workspace = true

# test
pretty_assertions.workspace = true

# async
futures-concurrency.workspace = true
futures-lite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
