[package]
name = "metagen"
edition.workspace = true
version.workspace = true

# this allows us to exclude the rust files
# from the dockerfile while keeping the Cargo.toml
# for cargo chef. Useful to improve cache hit in docker
[lib]
path = "src/lib.rs"

[dependencies]
# this library is used by typegraph_core
# so keep the codesize lite
common.workspace = true

# logging
log.workspace = true

# encoding
serde.workspace = true
serde_json.workspace = true
heck.workspace = true

# ds
dashmap.workspace = true
indexmap.workspace = true
regex.workspace = true
tera = { workspace = true, default-features = false }

# pattern
garde = { workspace = true, features = ["derive"] }
once_cell.workspace = true
color-eyre.workspace = true
normpath.workspace = true

# test
pretty_assertions.workspace = true

# async
futures-concurrency.workspace = true
futures-lite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
