[tool.poetry]
name = "pyrt_wit_wire"
version = "0.5.0-rc.2"
description = "Wasm component implementing the PythonRuntime host using wit_wire protocol."
license = "Elastic-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
