[package]
name = "typegate_api"
version.workspace = true
edition.workspace = true

# this allows us to exclude the rust files
# from the dockerfile while keeping the Cargo.toml
# for cargo chef. Useful to improve cache hit in docker
[lib]
path = "src/lib.rs"

[dependencies]
tg_schema.workspace = true
anyhow.workspace = true
itertools.workspace = true
indoc.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true, features = ["serde"] }
colored.workspace = true
async-trait.workspace = true
