[package]
name = "native"
version = "0.1.10"
edition = "2021"

[lib]
name = "native"
crate-type = ["cdylib"]

[features]
deno = []

[dependencies]
anyhow = "1.0"
deno_bindgen = "0.8.1"
serde = { version = "1.0.164", features = ["derive"] }
# Some crates has been removed from prisma-engines:
# instrospection-connector, introspection-core, sql-introspectcion-connector,
# mongodb-introspection-connector, migration-core, migration-connector
# Keep the tags until we update to the new implementation
query-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
query-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
prisma-models = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
datamodel-renderer = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
user-facing-errors = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
query-engine-metrics = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
schema-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
psl = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
schema-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.17.3"
futures = "0.3"
# introspection-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0"  }
# introspection-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0"  }
# sql-introspection-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0"  }
# mongodb-introspection-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0"  }
# migration-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0"  }
# migration-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.0.0"  }
temporal-client = { git = "https://github.com/temporalio/sdk-core" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core" }
connection-string = "0.2.0"
url = "2.4.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.19"
env_logger = "0.10.0"
serde_json = "1.0.97"
dashmap = "5.4.0"
common = { path = "../../libs/common" }
macros = { path = "../../libs/macros" }
typescript = { path = "../../libs/typescript" }
sentry = { version = "0.31.5", features = ["anyhow"] }
tempfile = "3.6.0"
convert_case = "0.6.0"
rust-s3 = "0.33.0"
http = "0.2.9"
envconfig = "0.10.0"
once_cell = "1.18.0"
wasmedge-sdk = { version = "0.8.1" }
base64 = "0.21.2"
tap = "1.0.1"
colored = "2.0.0"
