[package]
name = "native"
version = "0.2.2"
edition = "2021"

[lib]
name = "native"
crate-type = ["cdylib"]

[features]
deno = []

[dependencies]
anyhow = "1.0"
deno_bindgen = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
query-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
query-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
prisma-models = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
datamodel-renderer = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
user-facing-errors = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
query-engine-metrics = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
schema-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
psl = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
schema-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.4.2" }
futures = "0.3"
temporal-client = { git = "https://github.com/temporalio/sdk-core", rev = "7f9755b" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core", rev = "7f9755b" }
connection-string = "0.2.0"
url = "2.4.1"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.0"
serde_json = "1.0.107"
dashmap = "5.5.3"
common = { path = "../../libs/common" }
macros = { path = "../../libs/macros" }
typescript = { path = "../../libs/typescript" }
sentry = { version = "0.31.7", features = ["anyhow"] }
tempfile = "3.8.0"
convert_case = "0.6.0"
rust-s3 = "0.33.0"
http = "0.2.9"
envconfig = "0.10.0"
once_cell = "1.18.0"
base64 = "0.21.4"
tap = "1.0.1"
num-traits = "0.2.17"
num-derive = "0.4.1"
wasmedge-sdk = "=0.8.1"
wasmedge-sys = "=0.13.1"
wasmedge-types = "=0.4.1"
colored = "2.0.4"
