[package]
name = "tg_core"
edition.workspace = true
version.workspace = true

[lib]
name = "tg_core"
path = "lib.rs"

[dependencies]
anyhow = "1.0"
deno_bindgen = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.20"
futures = "0.3"
once_cell = "1.18.0"
envconfig = "0.10.0"
sentry = { version = "0.31.7", features = ["anyhow"] }
mt_deno.workspace = true
common.workspace = true
typescript.workspace = true

[dev-dependencies]
env_logger = "0.10.0"
