[package]
name = "typegraph_core"
version = "0.3.5-0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
enum_dispatch = "0.3.12"
once_cell = "1.18.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
wit-bindgen = "0.20.0"
regex = "1.10.2"
indexmap = { version = "2.2.5", features = ["serde"] }
common = { path = "../../libs/common" }
indoc = "2.0.4"
graphql-parser = "0.4.0"
sha2 = "0.10.8"
paste = "1.0.14"

[dev-dependencies]
insta = { version = "1.35.1", features = ["glob"] }
pathdiff = "0.2.1"
ptree = "0.4.0"
indoc = "2.0.4"
