[package]
name = "typegraph_core"
version = "0.3.7-0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
enum_dispatch = "0.3.12"
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen = "0.24.0"
regex.workspace = true
indexmap.workspace = true
common = { path = "../../libs/common" }
indoc.workspace = true
graphql-parser = "0.4.0"
sha2 = "0.10.8"
paste = "1.0.14"
seahash = "4.1.0"
ordered-float = "4.2.0"
glob = "0.3"

[dev-dependencies]
insta = { version = "1.34.0", features = ["glob"] }
pathdiff = "0.2.1"
ptree = "0.4.0"
indoc.workspace = true
